--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         var input = document.getElementById("input").value;
         console.log(input);
     }
+
+    var ramdomNum = Math.floor(Math.random() * 20); 
+    console.log(ramdomNum);
+
 </script>
 
 </body>
